i2f-tools/i2f-jdbc-procedure-idea-plugin/src/main/java/i2f/extension/antlr4/xproc4j/oracle/grammar/OracleGrammarParser.java
// Generated from E:/MySystemDefaultFiles/Desktop/30OfficeCenter/102-CjRoot/rwd-2025/RWD_SVC/jdbc-procedure/jdbc-procedure-core/src/main/java/i2f/extension/antlr4/oracle/grammar/rule/OracleGrammar.g4 by ANTLR 4.13.2

package i2f.extension.antlr4.xproc4j.oracle.grammar;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class OracleGrammarParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
            T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, TERM_COMMENT_SINGLE_LINE = 14, TERM_COMMENT_MULTI_LINE = 15,
            TERM_CONST_STRING_SINGLE = 16, TERM_CONST_NULL = 17, TERM_CONST_NUMBER_SCIEN_2 = 18,
            TERM_CONST_NUMBER_SCIEN_1 = 19, TERM_CONST_NUMBER_FLOAT = 20, TERM_CONST_NUMBER = 21,
            TERM_INTEGER = 22, KEY_AND = 23, KEY_OR = 24, KEY_IF = 25, KEY_THEN = 26, KEY_ELSE = 27,
            KEY_END = 28, KEY_COMMIT = 29, KEY_ROLLBACK = 30, KEY_EXECUTE = 31, KEY_IMMEDIATE = 32,
            KEY_INTO = 33, KEY_IS = 34, KEY_LIKE = 35, KEY_NOT = 36, KEY_BETWEEN = 37, KEY_TO = 38,
            KEY_DEFAULT = 39, KEY_CREATE = 40, KEY_REPLACE = 41, KEY_FUNCTION = 42, KEY_PROCEDURE = 43,
            KEY_IN = 44, KEY_OUT = 45, IDENTIFIER = 46, WS = 47;
    public static final int
            RULE_convert = 0, RULE_script = 1, RULE_segment = 2, RULE_declareProcedureSegment = 3,
            RULE_argumentDeclareListSegment = 4, RULE_argumentDeclareSegment = 5,
            RULE_declareVariableSegment = 6, RULE_sqlDataType = 7, RULE_conditionSegment = 8,
            RULE_conditionInSegment = 9, RULE_conditionNotInSegment = 10, RULE_variableListSegment = 11,
            RULE_conditionBetweenSegment = 12, RULE_conditionNotLikeSegment = 13,
            RULE_conditionIsNotNullSegment = 14, RULE_conditionIsNullSegment = 15,
            RULE_conditionCompositeSegment = 16, RULE_ifElseSegment = 17, RULE_variableSegment = 18,
            RULE_functionSegment = 19, RULE_argumentListSegment = 20, RULE_commitSegment = 21,
            RULE_rollbackSegment = 22, RULE_executeImmediadeVariableSegment = 23,
            RULE_assignSegment = 24, RULE_sqlNull = 25, RULE_sqlIdentifier = 26, RULE_sqlNumber = 27,
            RULE_sqlString = 28;

    private static String[] makeRuleNames() {
        return new String[]{
                "convert", "script", "segment", "declareProcedureSegment", "argumentDeclareListSegment",
                "argumentDeclareSegment", "declareVariableSegment", "sqlDataType", "conditionSegment",
                "conditionInSegment", "conditionNotInSegment", "variableListSegment",
                "conditionBetweenSegment", "conditionNotLikeSegment", "conditionIsNotNullSegment",
                "conditionIsNullSegment", "conditionCompositeSegment", "ifElseSegment",
                "variableSegment", "functionSegment", "argumentListSegment", "commitSegment",
                "rollbackSegment", "executeImmediadeVariableSegment", "assignSegment",
                "sqlNull", "sqlIdentifier", "sqlNumber", "sqlString"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "';'", "'('", "')'", "','", "'>='", "'<='", "'!='", "'<>'", "'>'",
                "'<'", "'='", "'||'", "':='", null, null, null, "'null'"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, "TERM_COMMENT_SINGLE_LINE", "TERM_COMMENT_MULTI_LINE", "TERM_CONST_STRING_SINGLE",
                "TERM_CONST_NULL", "TERM_CONST_NUMBER_SCIEN_2", "TERM_CONST_NUMBER_SCIEN_1",
                "TERM_CONST_NUMBER_FLOAT", "TERM_CONST_NUMBER", "TERM_INTEGER", "KEY_AND",
                "KEY_OR", "KEY_IF", "KEY_THEN", "KEY_ELSE", "KEY_END", "KEY_COMMIT",
                "KEY_ROLLBACK", "KEY_EXECUTE", "KEY_IMMEDIATE", "KEY_INTO", "KEY_IS",
                "KEY_LIKE", "KEY_NOT", "KEY_BETWEEN", "KEY_TO", "KEY_DEFAULT", "KEY_CREATE",
                "KEY_REPLACE", "KEY_FUNCTION", "KEY_PROCEDURE", "KEY_IN", "KEY_OUT",
                "IDENTIFIER", "WS"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "OracleGrammar.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public OracleGrammarParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ConvertContext extends ParserRuleContext {
        public ScriptContext script() {
            return getRuleContext(ScriptContext.class, 0);
        }

        public TerminalNode EOF() {
            return getToken(OracleGrammarParser.EOF, 0);
        }

        public ConvertContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_convert;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OracleGrammarListener) ((OracleGrammarListener) listener).enterConvert(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OracleGrammarListener) ((OracleGrammarListener) listener).exitConvert(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OracleGrammarVisitor)
                return ((OracleGrammarVisitor<? extends T>) visitor).visitConvert(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ConvertContext convert() throws RecognitionException {
        ConvertContext _localctx = new ConvertContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_convert);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(58);
                script();
                setState(59);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ScriptContext extends ParserRuleContext {
        public List<SegmentContext> segment() {
            return getRuleContexts(SegmentContext.class);
        }

        public SegmentContext segment(int i) {
            return getRuleContext(SegmentContext.class, i);
        }

        public ScriptContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_script;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OracleGrammarListener) ((OracleGrammarListener) listener).enterScript(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OracleGrammarListener) ((OracleGrammarListener) listener).exitScript(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OracleGrammarVisitor)
                return ((OracleGrammarVisitor<? extends T>) visitor).visitScript(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ScriptContext script() throws RecognitionException {
        ScriptContext _localctx = new ScriptContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_script);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(61);
                segment();
                setState(66);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 0, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(62);
                                match(T__0);
                                setState(63);
                                segment();
                            }
                        }
                    }
                    setState(68);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 0, _ctx);
                }
                setState(70);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__0) {
                    {
                        setState(69);
                        match(T__0);
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class SegmentContext extends ParserRuleContext {
        public ExecuteImmediadeVariableSegmentContext executeImmediadeVariableSegment() {
            return getRuleContext(ExecuteImmediadeVariableSegmentContext.class, 0);
        }

        public DeclareProcedureSegmentContext declareProcedureSegment() {
            return getRuleContext(DeclareProcedureSegmentContext.class, 0);
        }

        public DeclareVariableSegmentContext declareVariableSegment() {
            return getRuleContext(DeclareVariableSegmentContext.class, 0);
        }

        public AssignSegmentContext assignSegment() {
            return getRuleContext(AssignSegmentContext.class, 0);
        }

        public FunctionSegmentContext functionSegment() {
            return getRuleContext(FunctionSegmentContext.class, 0);
        }

        public IfElseSegmentContext ifElseSegment() {
            return getRuleContext(IfElseSegmentContext.class, 0);
        }

        public CommitSegmentContext commitSegment() {
            return getRuleContext(CommitSegmentContext.class, 0);
        }

        public RollbackSegmentContext rollbackSegment() {
            return getRuleContext(RollbackSegmentContext.class, 0);
        }

        public VariableSegmentContext variableSegment() {
            return getRuleContext(VariableSegmentContext.class, 0);
        }

        public ConditionSegmentContext conditionSegment() {
            return getRuleContext(ConditionSegmentContext.class, 0);
        }

        public SegmentContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_segment;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OracleGrammarListener) ((OracleGrammarListener) listener).enterSegment(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OracleGrammarListener) ((OracleGrammarListener) listener).exitSegment(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OracleGrammarVisitor)
                return ((OracleGrammarVisitor<? extends T>) visitor).visitSegment(this);
            else return visitor.visitChildren(this);
        }
    }

    public final SegmentContext segment() throws RecognitionException {
        SegmentContext _localctx = new SegmentContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_segment);
        try {
            setState(82);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 2, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(72);
                    executeImmediadeVariableSegment();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(73);
                    declareProcedureSegment();
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(74);
                    declareVariableSegment();
                }
                break;
                case 4:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(75);
                    assignSegment();
                }
                break;
                case 5:
                    enterOuterAlt(_localctx, 5);
                {
                    setState(76);
                    functionSegment();
                }
                break;
                case 6:
                    enterOuterAlt(_localctx, 6);
                {
                    setState(77);
                    ifElseSegment();
                }
                break;
                case 7:
                    enterOuterAlt(_localctx, 7);
                {
                    setState(78);
                    commitSegment();
                }
                break;
                case 8:
                    enterOuterAlt(_localctx, 8);
                {
                    setState(79);
                    rollbackSegment();
                }
                break;
                case 9:
                    enterOuterAlt(_localctx, 9);
                {
                    setState(80);
                    variableSegment(0);
                }
                break;
                case 10:
                    enterOuterAlt(_localctx, 10);
                {
                    setState(81);
                    conditionSegment();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class DeclareProcedureSegmentContext extends ParserRuleContext {
        public TerminalNode KEY_CREATE() {
            return getToken(OracleGrammarParser.KEY_CREATE, 0);
        }

        public TerminalNode IDENTIFIER() {
            return getToken(OracleGrammarParser.IDENTIFIER, 0);
        }

        public TerminalNode KEY_FUNCTION() {
            return getToken(OracleGrammarParser.KEY_FUNCTION, 0);
        }

        public TerminalNode KEY_PROCEDURE() {
            return getToken(OracleGrammarParser.KEY_PROCEDURE, 0);
        }

        public TerminalNode KEY_OR() {
            return getToken(OracleGrammarParser.KEY_OR, 0);
        }

        public TerminalNode KEY_REPLACE() {
            return getToken(OracleGrammarParser.KEY_REPLACE, 0);
        }

        public ArgumentDeclareListSegmentContext argumentDeclareListSegment() {
            return getRuleContext(ArgumentDeclareListSegmentContext.class, 0);
        }

        public DeclareProcedureSegmentContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_declareProcedureSegment;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OracleGrammarListener)
                ((OracleGrammarListener) listener).enterDeclareProcedureSegment(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OracleGrammarListener)
                ((OracleGrammarListener) listener).exitDeclareProcedureSegment(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OracleGrammarVisitor)
                return ((OracleGrammarVisitor<? extends T>) visitor).visitDeclareProcedureSegment(this);
            else return visitor.visitChildren(this);
        }
    }

    public final DeclareProcedureSegmentContext declareProcedureSegment() throws RecognitionException {
        DeclareProcedureSegmentContext _localctx = new DeclareProcedureSegmentContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_declareProcedureSegment);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(84);
                match(KEY_CREATE);
                {
                    setState(85);
                    match(KEY_OR);
                    setState(86);
                    match(KEY_REPLACE);
                }
                setState(88);
                _la = _input.LA(1);
                if (!(_la == KEY_FUNCTION || _la == KEY_PROCEDURE)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
                setState(89);
                match(IDENTIFIER);
                setState(90);
                match(T__1);
                setState(92);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == IDENTIFIER) {
                    {
                        setState(91);
                        argumentDeclareListSegment();
                    }
                }

                setState(94);
                match(T__2);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ArgumentDeclareListSegmentContext extends ParserRuleContext {
        public List<ArgumentDeclareSegmentContext> argumentDeclareSegment() {
            return getRuleContexts(ArgumentDeclareSegmentContext.class);
        }

        public ArgumentDeclareSegmentContext argumentDeclareSegment(int i) {
            return getRuleContext(ArgumentDeclareSegmentContext.class, i);
        }

        public ArgumentDeclareListSegmentContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_argumentDeclareListSegment;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OracleGrammarListener)
                ((OracleGrammarListener) listener).enterArgumentDeclareListSegment(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OracleGrammarListener)
                ((OracleGrammarListener) listener).exitArgumentDeclareListSegment(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OracleGrammarVisitor)
                return ((OracleGrammarVisitor<? extends T>) visitor).visitArgumentDeclareListSegment(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ArgumentDeclareListSegmentContext argumentDeclareListSegment() throws RecognitionException {
        ArgumentDeclareListSegmentContext _localctx = new ArgumentDeclareListSegmentContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_argumentDeclareListSegment);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(96);
                argumentDeclareSegment();
                setState(101);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__3) {
                    {
                        {
                            setState(97);
                            match(T__3);
                            setState(98);
                            argumentDeclareSegment();
                        }
                    }
                    setState(103);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ArgumentDeclareSegmentContext extends ParserRuleContext {
        public List<TerminalNode> IDENTIFIER() {
            return getTokens(OracleGrammarParser.IDENTIFIER);
        }

        public TerminalNode IDENTIFIER(int i) {
            return getToken(OracleGrammarParser.IDENTIFIER, i);
        }

        public TerminalNode KEY_IN() {
            return getToken(OracleGrammarParser.KEY_IN, 0);
        }

        public TerminalNode KEY_OUT() {
            return getToken(OracleGrammarParser.KEY_OUT, 0);
        }

        public ArgumentDeclareSegmentContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_argumentDeclareSegment;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OracleGrammarListener)
                ((OracleGrammarListener) listener).enterArgumentDeclareSegment(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OracleGrammarListener)
                ((OracleGrammarListener) listener).exitArgumentDeclareSegment(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OracleGrammarVisitor)
                return ((OracleGrammarVisitor<? extends T>) visitor).visitArgumentDeclareSegment(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ArgumentDeclareSegmentContext argumentDeclareSegment() throws RecognitionException {
        ArgumentDeclareSegmentContext _localctx = new ArgumentDeclareSegmentContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_argumentDeclareSegment);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(104);
                match(IDENTIFIER);
                setState(106);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == KEY_IN || _la == KEY_OUT) {
                    {
                        setState(105);
                        _la = _input.LA(1);
                        if (!(_la == KEY_IN || _la == KEY_OUT)) {
                            _errHandler.recoverInline(this);
                        } else {
                            if (_input.LA(1) == Token.EOF) matchedEOF = true;
                            _errHandler.reportMatch(this);
                            consume();
                        }
                    }
                }

                setState(108);
                match(IDENTIFIER);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class DeclareVariableSegmentContext extends ParserRuleContext {
        public SqlIdentifierContext sqlIdentifier() {
            return getRuleContext(SqlIdentifierContext.class, 0);
        }

        public SqlDataTypeContext sqlDataType() {
            return getRuleContext(SqlDataTypeContext.class, 0);
        }

        public TerminalNode KEY_DEFAULT() {
            return getToken(OracleGrammarParser.KEY_DEFAULT, 0);
        }

        public VariableSegmentContext variableSegment() {
            return getRuleContext(VariableSegmentContext.class, 0);
        }

        public DeclareVariableSegmentContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_declareVariableSegment;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OracleGrammarListener)
                ((OracleGrammarListener) listener).enterDeclareVariableSegment(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OracleGrammarListener)
                ((OracleGrammarListener) listener).exitDeclareVariableSegment(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OracleGrammarVisitor)
                return ((OracleGrammarVisitor<? extends T>) visitor).visitDeclareVariableSegment(this);
            else return visitor.visitChildren(this);
        }
    }

    public final DeclareVariableSegmentContext declareVariableSegment() throws RecognitionException {
        DeclareVariableSegmentContext _localctx = new DeclareVariableSegmentContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_declareVariableSegment);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(110);
                sqlIdentifier();
                setState(111);
                sqlDataType();
                setState(114);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == KEY_DEFAULT) {
                    {
                        setState(112);
                        match(KEY_DEFAULT);
                        setState(113);
                        variableSegment(0);
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class SqlDataTypeContext extends ParserRuleContext {
        public SqlIdentifierContext sqlIdentifier() {
            return getRuleContext(SqlIdentifierContext.class, 0);
        }

        public List<SqlNumberContext> sqlNumber() {
            return getRuleContexts(SqlNumberContext.class);
        }

        public SqlNumberContext sqlNumber(int i) {
            return getRuleContext(SqlNumberContext.class, i);
        }

        public SqlDataTypeContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_sqlDataType;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OracleGrammarListener) ((OracleGrammarListener) listener).enterSqlDataType(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OracleGrammarListener) ((OracleGrammarListener) listener).exitSqlDataType(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OracleGrammarVisitor)
                return ((OracleGrammarVisitor<? extends T>) visitor).visitSqlDataType(this);
            else return visitor.visitChildren(this);
        }
    }

    public final SqlDataTypeContext sqlDataType() throws RecognitionException {
        SqlDataTypeContext _localctx = new SqlDataTypeContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_sqlDataType);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(116);
                sqlIdentifier();
                setState(125);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__1) {
                    {
                        setState(117);
                        match(T__1);
                        setState(118);
                        sqlNumber();
                        setState(121);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        if (_la == T__3) {
                            {
                                setState(119);
                                match(T__3);
                                setState(120);
                                sqlNumber();
                            }
                        }

                        setState(123);
                        match(T__2);
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }
